# trojan-pr

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  PLAN.md  README.md  main.py  power_analysis.py  project1_analysis_v2.md  pyproject.toml
plans/: stage1_implementation_plan.md  stage1_pattern_refinement_plan.md
stage1/: METHODS.md  REVIEW_FINDINGS.md  REVIEW_FINDINGS_V2.md  REVIEW_GUIDE.md  REVIEW_GUIDE_V2_REFINED.md  REVIEW_PLAN.md  REVIEW_PLAN_V2.md  sift.py  stage1_candidates.json  stage1_funnel.json
stage1/tests/: test_sift.py
validation/: ground_truth.json  validate.py
