[project]
name = "trojan-pr"
version = "0.1.0"
description = "Research benchmark for measuring LLM coding agent sabotage capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.0.0",
    "pandas>=2.0.0",
    "bandit>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
